# NumericalOptimization

./: .gitignore  README.md
Homework/HW1/: readme.md  report.md
Homework/HW1/code/: optimize.py
Homework/HW1/doc/: readme.md  report.md
Homework/HW2/: readme.md  report.md
Homework/HW2/catkin_ws/src/path_smoothing/gcopter/include/gcopter/: cubic_spline.hpp  gcopter.hpp  lbfgs.hpp  path_smoother.hpp
Homework/HW2/catkin_ws/src/path_smoothing/gcopter/src/: curve_gen.cpp
Homework/HW3/: readme.md  report.md
Homework/HW3/code/KKT-condition/: CMakeLists.txt
Homework/HW3/code/KKT-condition/example/: kkt_example.cpp
Homework/HW3/code/KKT-condition/include/: kkt.hpp
Homework/HW3/code/low-dim-QP/: CMakeLists.txt
Homework/HW3/code/low-dim-QP/example/: test.cpp
Homework/HW3/code/low-dim-QP/include/sdqp/: sdqp.hpp
